--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "mongoose": "^7.1.0",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
+    "prom-client": "^14.2.0",
     "uuid": "^9.0.0"
   },
   "name": "debateai",
